[gd_scene load_steps=5 format=2]

[ext_resource path="res://imports/bullet.png" type="Texture" id=1]
[ext_resource path="res://Weapons/sniper_bullet.gd" type="Script" id=2]
[ext_resource path="res://hitandhurt/hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 0.799997
height = 1.60013

[node name="sniper_bullet" type="KinematicBody2D"]
rotation = 1.5708
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 2 )

[node name="BulletSprite" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 9
damage = 400

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 2.38322e-08, -2.67029e-06 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="FlyingTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( -3.19998, 6.40001, -2.39999, 3.20001, -1.2, 1.2, 1.2, -4.34399e-06, -1.2, -1.2, -2.40001, -3.19999, -3.20002, -6.39999 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="FlyingTimer" to="." method="_on_FlyingTimer_timeout"]

[editable path="hitbox"]
